# Analyst-Conviction-Framework

./: .gitignore  README.md  app.py  dashboard.py  main.py  portfolio_manager.py  pyproject.toml  requirements.txt  run.py  run_backtest.py
.claude/: settings.local.json
backend/: main.py  pyproject.toml  schemas.py
backend/routes/: backtest.py  news.py  portfolio.py  rankings.py  sector.py  stream.py  ticker.py
backend/src/api/: data_fetcher.py
backend/src/core/: backtest.py  models.py  scoring.py
backend/src/database/: portfolio.py
backend/src/services/: analysis_service.py
backend/src/web/: app.py
frontend/: package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/backtest/: page.tsx
frontend/src/app/portfolio/: page.tsx
frontend/src/app/sectors/: page.tsx
frontend/src/app/ticker/[symbol]/: page.tsx
frontend/src/components/: CandlestickChart.tsx  Marquee.tsx  RankingsTable.tsx
frontend/src/hooks/: usePriceStream.ts
frontend/src/lib/: api.ts  api.types.ts
tests/: test_scoring.py
