[project]
name = "stock-market-bing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "certifi>=2026.2.25",
    "charset-normalizer>=3.4.5",
    "colorama>=0.4.6",
    "curl-cffi>=0.14.0",
    "fpdf>=1.7.2",
    "frozendict>=2.4.7",
    "html5lib>=1.1",
    "idna>=3.11",
    "kaleido>=1.2.0",
    "lxml>=6.0.2",
    "multitasking>=0.0.12",
    "nltk>=3.9.3",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pandas-ta>=0.4.71b0",
    "peewee>=4.0.1",
    "platformdirs>=4.9.4",
    "plotly>=6.6.0",
    "pycparser>=3.0",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2026.1.post1",
    "requests>=2.32.5",
    "ruff>=0.15.5",
    "scipy>=1.17.1",
    "six>=1.17.0",
    "soupsieve>=2.8.3",
    "streamlit>=1.55.0",
    "tabulate>=0.10.0",
    "tenacity>=9.1.4",
    "tqdm>=4.67.3",
    "typing-extensions>=4.15.0",
    "tzdata>=2025.3",
    "urllib3>=2.6.3",
    "webencodings>=0.5.1",
    "websockets>=16.0",
    "yfinance>=0.2.66",
]

[tool.uv.workspace]
members = [
    "backend",
]
