[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.22",
    "scikit-learn>=1.8.0",
    "sse-starlette>=3.3.2",
    "uvicorn>=0.41.0",
    "yfinance>=0.2.66",
]
